--- a/playbooks/retrieve_networks.yml
+++ b/playbooks/retrieve_networks.yml
@@ -1,12 +1,12 @@
 ---
-- name: retrieve networks 
+- name: Retrieve networks 
   hosts: localhost
   connection: local
   tasks:
-    - name: get all virtual networks
+    - name: Get all virtual networks
       azure.azcollection.azure_rm_virtualnetwork_info:
       register: azure_networks
 
-    - name: print azure_networks var
+    - name: Print azure_networks var
       ansible.builtin.debug:
         msg: "{{ azure_networks }}"
