--- a/roles/build_report_azure/vars/main.yml
+++ b/roles/build_report_azure/vars/main.yml
@@ -1,6 +1,7 @@
 file_path: /var/www/html/
-web_host: ansible-1
+web_host: "{{ report_server | default('ansible-1') }}"
 web_port: 8088
+#
 # multi key, same value lookup for cisco
 vendor:
   ios: &my_value 'Cisco'
