--- a/roles/build_report_azure/tasks/main.yml
+++ b/roles/build_report_azure/tasks/main.yml
@@ -3,6 +3,14 @@
   ansible.builtin.debug:
     var: hostvars["localhost"]
 
+- name: Stop and disable firewalld service
+  become: true
+  ansible.builtin.service:
+    name: firewalld
+    enabled: false
+    state: stopped
+    ignore_errors: true
+
 - name: Install apache
   become: true
   ansible.builtin.dnf:
@@ -68,4 +76,4 @@
     msg:
       - "Please go to http://{{ public_ip_report.stdout | default(ansible_fqdn) }}:{{ web_port }}"
       - "or just refresh the Cloud Report tab"
-      - "at the top of your window if you using Instruqt labs!"
+      - "at the top of your window if you're using Instruqt labs!"
